--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-website",
   "devDependencies": {
     "browser-sync": "^2.11.1",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-sass": "^2.1.1"
   }
 }
