--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "portfolio-website",
   "version": "0.1.0",
   "dependencies": {
-    "jquery": "1.8"
+    "jquery": "1.8",
+    "normalize-css": "normalize.css#~3.0.3"
   }
 }
