--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,20 @@
   "version": "0.1.0",
   "dependencies": {
     "jquery": "1.8",
-    "normalize-css": "normalize.css#~3.0.3"
+    "normalize-css": "normalize.css#~3.0.3",
+    "jquery-placeholder": "~2.3.1",
+    "qtip2": "~2.2.1",
+    "bPopup": "bpopup#~0.11.0"
+  },
+  "overrides": {
+  	"qtip2" : {
+  		"main" : [
+  			"./jquery.qtip.js",
+  			"./jquery.qtip.css"
+  		],
+  		"dependencies": {
+		"jquery": ">=1.6.0"
+		}
+  	}
   }
 }
